--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div id="mapid"></div>
-  <footer>
+  <!-- <footer>
     <img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50">
-  </footer>
+  </footer> -->
 </body>
 </html>
