--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,31 @@
   <title>COVID-19 Dashboard</title>
 </head>
 <body>
-  <div id="mapid"></div>
+  <div class="map-wrapper">
+    <div id="mapid"></div>
+    <form class="control-layers">
+      <div class="group-value">
+        <div class="btn">
+          <input type="radio" class="value-absolute" name="value" value="absolute" checked>
+          <label for="absolute">Abcolute value</label>
+        </div>
+        <div class="btn">
+          <input type="radio" class="value-coefficient" name="value" value="coefficient">
+          <label for="coefficient">Per 100k population</label>
+        </div>
+      </div>
+      <div class="group-time">
+        <div class="btn">
+          <input type="radio" class="time-all" name="time" value="all-time" checked>
+          <label for="all-time">All time</label>
+        </div>
+        <div class="btn">
+          <input type="radio" class="time-last-day" name="time" value="last-day">
+          <label for="last-day">Last day</label>
+        </div>
+      </div>
+    </form>
+  </div>
   <!-- <footer>
     <img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50">
   </footer> -->
