--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>COVID-19 Dashboard</title>
 </head>
 <body>
+  <div id="list" class="list"></div>
   <div id="mapid"></div>
   <!-- <footer>
     <img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50">
