feat: refactor world-map.js, remove getCovidDataFromAPI and getPopulationDataFromAPI

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="map-wrapper">
-    <div id="mapid"></div>
+    <div class="world-map" id="mapid"></div>
     <form class="control-layers">
       <div class="group-value">
         <div class="btn">
