--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="list" class="list"></div>
-  <div id="mapid"></div>
+  <div id="table" class="table"></div>
+  <!-- <div id="mapid"></div> -->
   <!-- <footer>
     <img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50">
   </footer> -->
