--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <a href="https://github.com/silenthil" class="Ghlogo"><img src="./img/iconmonstr-github-1.svg" width="40px" height="40px"></a>
     <a href="https://github.com/Illenata" class="Ghlogo"><img src="./img/iconmonstr-github-1.svg" width="40px" height="40px"></a>
     <a href="https://github.com/DanCmdn" class="Ghlogo"><img src="./img/iconmonstr-github-1.svg" width="40px" height="40px"></a>
-    <img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50">
+    <a href="https://rs.school/js/" class="logo"><img src="./img/rs_school_js.svg" alt="logo" class="logo" width="100" height="50"></a>
   </footer>
 </body>
 </html>
